--- a/crib_ricker/Assembly-CSharp-vs.csproj
+++ b/crib_ricker/Assembly-CSharp-vs.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\ball_script.cs" />
+     <Compile Include="Assets\Scripts\block_script.cs" />
      <Compile Include="Assets\Scripts\master_script.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/4.6.3/UnityEngine.UI.dll</HintPath>
